only update was a bit missleading
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13243 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.header.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.header.html
@@ -1,3 +1,4 @@
+
 [#macro contextMessages]
 <p id="progress"><span class="executedTaskCount">${context.executedTaskCount}</span> tasks have been executed, for a total of <span class="executedTaskCount">${context.totalTaskCount}</span> tasks.</p>
 
@@ -22,7 +23,7 @@
     <script type="text/javascript">
 [#include "ModuleManagerWebUI.js" /]
     </script>
-    <title>Magnolia update ...</title>
+    <title>Magnolia install/update ...</title>
 </head>
 <body>
 <img src="${contextPath}/.resources/images/moduleManagerUI/magnoliaLogo.gif"/>
@@ -30,5 +31,5 @@
 <div id="page">
 <div id="header">
 <img src="${contextPath}/.resources/images/moduleManagerUI/box_software.gif" id="softwareIcon"/>
-<h1>Magnolia update ...</h1>
+<h1>Magnolia install/update ...</h1>
 </div>
