--- a/magnolia-module-mail/src/main/resources/workflowNotification.html
+++ b/magnolia-module-mail/src/main/resources/workflowNotification.html
@@ -9,10 +9,10 @@
     </p>
     
     <p>
-    The mail was build with a Freemarker template in which you can use variables (attributes) using the <i>${r"${curlyBraces}"}</i> syntax.<br/>
+    The mail was built with a Freemarker template in which you can use variables (attributes) using the <i>${r"${curlyBraces}"}</i> syntax.<br/>
     In general you can use every attribute that is set on the MgnlContext (see info.magnolia.context.Context) or - in case it was sent from a workflow - attributes set on the WorkItem (see info.magnolia.module.workflow.WorkItemContext).<br/>
     <br/>
-    Further, when using a workflow to send the mail you can set attributes in the WorkItemContext using the <tt>&lt;set field="role" value="publisher"/&gt;</tt> tag.<br/>
+    Furthermore, when using a workflow to send the mail you can set attributes in the WorkItemContext using the <tt>&lt;set field="role" value="publisher"/&gt;</tt> tag.<br/>
     <br/>
     In most cases you might want to use the following attributes:
     </p> 
