MAGNOLIA-2048 : added ${comment} to the sample workflow notification email
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@14452 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-mail/src/main/resources/workflowNotification.html
+++ b/magnolia-module-mail/src/main/resources/workflowNotification.html
@@ -31,6 +31,8 @@
         <dd>${repository}</dd>
         <dt>activator</dt>
         <dd>${activator}</dd>
+        <dt>comment</dt>
+        <dd>${comment!'(none)'}</dd>
     </dl>
   </body>
 </html>
