MAGNOLIA-2065 / MAGNOLIA-1953 : removed pathSelected variable, reordered some others
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@15853 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-mail/src/main/resources/workflowNotification.html
+++ b/magnolia-module-mail/src/main/resources/workflowNotification.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html SYSTEM "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head></head>
   <body>
@@ -19,20 +19,18 @@
     <dl>
         <dt>userName</dt>
         <dd>${userName}</dd>
-        <dt>pathSelected</dt>
-        <dd>${pathSelected}</dd>
+        <dt>repository</dt>
+        <dd>${repository}</dd>
+        <dt>path</dt>
+        <dd>${path}</dd>
+        <dt>activator</dt>
+        <dt>comment</dt>
+        <dd>${comment!'(none)'}</dd>
+        <dd>${activator}</dd>
         <dt>mailTemplate</dt>
         <dd>${mailTemplate}</dd>
         <dt>mailTo</dt>
         <dd>${mailTo}</dd>
-        <dt>path</dt>
-        <dd>${path}</dd>
-        <dt>repository</dt>
-        <dd>${repository}</dd>
-        <dt>activator</dt>
-        <dd>${activator}</dd>
-        <dt>comment</dt>
-        <dd>${comment!'(none)'}</dd>
     </dl>
   </body>
 </html>
