MAGNOLIA-2065 / MAGNOLIA-1953 : pathSelected is not always set
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@15858 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-mail/src/main/resources/workflowNotification.html
+++ b/magnolia-module-mail/src/main/resources/workflowNotification.html
@@ -23,10 +23,12 @@
         <dd>${repository}</dd>
         <dt>path</dt>
         <dd>${path}</dd>
+        <dt>pathSelected</dt>
+        <dd>${pathSelected!'<i>(not set)</i>'}</dd>
         <dt>activator</dt>
-        <dt>comment</dt>
-        <dd>${comment!'(none)'}</dd>
         <dd>${activator}</dd>
+        <dt>comment</dt>
+        <dd>${comment!'<i>(none)</i>'}</dd>
         <dt>mailTemplate</dt>
         <dd>${mailTemplate}</dd>
         <dt>mailTo</dt>
