MAGNOLIA-1198: - support magnolia.develop property - messages.[lang].js (by using regex uri mapping)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16036 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <script type="text/javascript" src="${contextPath}/.magnolia/pages/javascript.js"></script>
+        <script type="text/javascript" src="${contextPath}/.magnolia/pages/messages.${this.language}.js"></script>
         <script type="text/javascript" src="${contextPath}/.resources/admin-js/dialogs/dialogs.js"></script>
         <script type="text/javascript" src="${contextPath}/.resources/admin-js/dialogs/calendar.js"></script>
         <script type="text/javascript" src="${contextPath}/.resources/js-libs/json/json.js"></script>
