--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="${this.request.contextPath}/.resources/admin-css/admin-all.css" />
     <!--  keep the old javascripts -->
     <script type="text/javascript" src="${this.request.contextPath}/.magnolia/pages/javascript.js"><!-- --></script>
+    <script type="text/javascript" src="${this.request.contextPath}/.magnolia/pages/messages.${this.user.language}.js"><!-- --></script>
     <script type="text/javascript">
         importClass("mgnl.admininterface.AdminCentral");
         importClass("mgnl.admininterface.Navigation");
