--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
         <script type="text/javascript" src="${contextPath}/.magnolia/pages/javascript.js"></script>
