--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/loginForm/login.html
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/loginForm/login.html
@@ -7,6 +7,7 @@
     <script type="text/javascript">
         window.onload = function() {
             document.getElementById('username').focus();
+            document.getElementById('externallink').target= "_blank";
         }
     </script>
   </head>
@@ -44,7 +45,7 @@
     </div>
     <div id="footer">
       &copy; Copyright 2003-2008
-      <a href="http://www.magnolia.info" target="_blank">Magnolia International Ltd.</a>
+      <a href="http://www.magnolia.info" id="externallink">Magnolia International Ltd.</a>
        -
       Maiengasse 30, 4056 Basel, Switzerland
        <br/>
