MAGNOLIA-2226 / MAGNOLIA-1821 : fixed config info page (but removed uptime temporarily) MAGNOLIA-1850 removed usage of info.magnolia.cms.beans.config.Server in config info page
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16651 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ConfigurationPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ConfigurationPage.html
@@ -15,25 +15,15 @@
           <th scope="col">Value</th>
         </tr>
       </thead>
+        [#comment] uptime was giving wrong figures since 3.5  / see MAGNOLIA-1821
       <tr>
         <td>Server up since...</td>
         <td>${this.server.getUptime()}</td>
       </tr>
+        [/#comment]
       <tr>
         <td>Is admin server</td>
         <td>${this.server.isAdmin()?string}</td>
-      </tr>
-      <tr>
-        <td>Server ID</td>
-        <td>${this.serverId}</td>
-      </tr>
-      <tr>
-        <td>Default Mail Server</td>
-        <td>${this.defaultMailServer}</td>
-      </tr>
-      <tr>
-        <td>Basic Realm</td>
-        <td>${this.server.getBasicRealm()}</td>
       </tr>
     </table>
     <h3>General Magnolia System Data</h3>
