Applyig patch from MAGNOLIA-2091 : closing popup browser when linking image
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16683 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-fckeditor/src/main/resources/info/magnolia/module/fckeditor/pages/RepositoryBrowserPageSubmit.html
+++ b/magnolia-module-fckeditor/src/main/resources/info/magnolia/module/fckeditor/pages/RepositoryBrowserPageSubmit.html
@@ -10,7 +10,9 @@
       // <!-- 
         function setURI() {
           opener.SetUrl("${this.absoluteURI}");
-          opener.document.getElementById('cmbLinkProtocol').value = '';
+          if ( opener.document.getElementById('cmbLinkProtocol') != null ) {
+          	opener.document.getElementById('cmbLinkProtocol').value = '';
+          }
           window.top.close();
         }
       // -->
