--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/JCRUtilsPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/JCRUtilsPage.html
@@ -56,7 +56,7 @@
               <input type="text" name="itemType" value="${this.itemType}" />
             </div>
             <div>
-                   <textarea name="statement" rows="4" cols="40">${this.statement}</textarea>
+                   <textarea name="statement" rows="4" cols="40" style="width:380px;height:200px">${this.statement}</textarea>
             </div>
             <input type="submit" value="Execute" class="mgnlControlButton" />
           </form>
