updated tagline ("Simple Enteprise Content Management" -> "Simple Open Source Content Management")
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@17102 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.footer.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.footer.html
@@ -2,7 +2,7 @@
 </div>
 
 <div id="footer">
-<a target="_blank" href="http://www.magnolia.info">Magnolia</a>&trade; Simple Enterprise Content Management.
+<a target="_blank" href="http://www.magnolia.info">Magnolia</a>&trade; Simple Open Source Content Management.
 </div>
 
 </body>
