--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -67,7 +67,7 @@
     <!-- logo -->
     <div>
     <a href="http://www.magnolia.info" target="_blank">
-      <img style="position:absolute; top:17px; left:20px" alt="Magnolia - Simple is beautiful"
+      <img style="position:absolute; top:17px; left:20px" alt="Magnolia - Simple Open Source Content Management"
         src="${this.request.contextPath}/.resources/admin-images/magnoliaLogo.gif" />
     </a>
     </div>
@@ -108,7 +108,7 @@
     <!-- About -->
     <div id="mgnlAdminCentralFooterDiv" style="position:absolute;text-align:center;" class="mgnlText">
       <a href="http://www.magnolia.info" target="_blank">Magnolia</a>
-      &trade; Simple Enterprise Content Management. ${this.versionString} -
+      &trade; Simple Open Source Content Management. ${this.versionString} -
       <a href="http://jira.magnolia.info" target="_blank">${this.messages.get("central.bugFeatureRequest")}</a> -
       <a href="http://documentation.magnolia.info" target="_blank">${this.messages.get("central.documentation")}</a>
     </div>
