--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -77,7 +77,7 @@
       <form action="" method="post" style="padding: 0; margin: 0;">
         <div>
         <input type="hidden" name="mgnlLogout" value="true"/>
-        ${this.messages.get("central.user")}: ${this.user.name} |
+        ${this.messages.get("central.user")}: <span onclick="mgnlOpenDialog('${this.user.userNode.@handle}','','','','users','.magnolia/dialogs/useredit.html')" style=" font-size: 11px; color: black; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0;" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';">${this.user.name}</span> |
         <input type="submit" name="logout" value="${this.messages.get('central.logout')}" style="font-size: 11px; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0:" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';"/>
         </div>
       </form>
