utf8 header helps at least locally
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18286 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/calendar/test-lang.html
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/calendar/test-lang.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
   <title>Quickly hacked page to test languages in calendars ... not sure it all works correctly...</title>
   <link rel="stylesheet" type="text/css" media="all" href="calendar-win2k-cold-1.css" title="win2k-cold-1" />
   <script type="text/javascript" src="calendar.js"></script>
