now really shows textual date in text field
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18305 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/calendar/test-lang.html
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/calendar/test-lang.html
@@ -86,7 +86,7 @@ document.getElementById('f_trigger').click();
 <script type="text/javascript">
     Calendar.setup({
         inputField     :    "f_date",      // id of the input field
-        ifFormat       :    "%m/%d/%Y %I:%M %p",       // format of the input field
+        ifFormat       :    "%B %e, %Y - %I:%M %p",       // format of the input field
         button         :    "f_trigger",   // trigger for the calendar (button ID)
         align          :    "Bl",           // alignment (defaults to "Bl")-->
         showsTime      :    true,            // will display a time selector
