MAGNOLIA-2325, MAGNOLIA-2302 Fixed width of toolbar display to always cover all available space.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18394 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
@@ -35,6 +35,7 @@
                 functionBar = $('mgnlFunctionBarDiv');
                 if(functionBar){
                     functionBar.style.position = "absolute";
+                    functionBar.style.width = "100%";
                 }
                 mgnlListResize();
             });
