--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
@@ -43,20 +43,21 @@ function sendCommand(formName, commandName) {
         </div>
     </td>
     </tr>
-    [#if this.fileSizeInLines > 0 && this.fileName?length > 0]
+    [#if this.fileSizeInLines?length > 0 && this.fileName?length > 0]
     <tr >
    <td  >
    <table style="padding: 0; margin: 0;"> <tr> <td align="left" width="40%">
-     [#if this.fileSizeInLines > this.maxNumLinesPerPage ]
+     [#if this.fileSizeInLines?length > this.maxNumLinesPerPage ]
         <a href="#bottom">bottom</a>
      [/#if]
 </td>
-<form action="" id="pagination" style="padding: 0; margin: 0;">
+
     <td align="left" width="40%">
 
      Page ${this.pageNumber} of ${this.totalPages}
      </td>
      <td align="left" width="20%">
+     <form action="" id="pagination" style="padding: 0; margin: 0;">
           <input type="hidden" name="currentPosition" value="${this.currentPosition}" />
           <input type="hidden" name="fileName"  value="${this.fileName}" />
           <input type="hidden" name="fileSizeInLines"  value="${this.fileSizeInLines}" />
@@ -65,20 +66,21 @@ function sendCommand(formName, commandName) {
           <input type="button" value="&lt;" onclick="sendCommand('pagination','previous');" class="mgnlControlButton" />
           <input type="button" value="&gt;" onclick="sendCommand('pagination','next');" class="mgnlControlButton" />
           <input type="button" value="&gt;&gt;" onclick="sendCommand('pagination','end');" class="mgnlControlButton" />
+          </form>
      </td>
-    </form>
+
 </tr> </table>
         <div class="pageframe">
 
           ${this.text}
         </div>
-      [#if this.fileSizeInLines > this.maxNumLinesPerPage ]
+      [#if this.fileSizeInLines?length > this.maxNumLinesPerPage ]
         <a name="bottom" href="#top">top</a>
       [/#if]
     </td>
     </tr>
     [/#if]
-      [#if this.fileSizeInLines == 0 && this.fileName?length > 0]
+      [#if this.fileSizeInLines?length == 0 && this.fileName?length > 0]
     <tr>
    <td valign="top">
         <div class="pageframe">
