MAGNOLIA-764 fixed problem with big numbers
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@18969 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
@@ -58,9 +58,9 @@ function sendCommand(formName, commandName) {
      </td>
      <td align="left" width="20%">
      <form action="" id="pagination" style="padding: 0; margin: 0;">
-          <input type="hidden" name="currentPosition" value='${this.currentPosition}' />
+          <input type="hidden" name="currentPosition" value="${this.currentPosition?c}" />
           <input type="hidden" name="fileName"  value="${this.fileName}" />
-          <input type="hidden" name="fileSizeInLines"  value='${this.fileSizeInLines}' />
+          <input type="hidden" name="fileSizeInLines"  value="${this.fileSizeInLines?c}" />
           <input type="hidden" name="command" value="begin" />
           <input type="button" value="&lt;&lt;" onclick="sendCommand('pagination','begin');" class="mgnlControlButton" />
           <input type="button" value="&lt;" onclick="sendCommand('pagination','previous');" class="mgnlControlButton" />
